--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,39 @@
 {
-    "name": "league/phpunit-coverage-listener",
-    "description": "Utility library that allow you to process the PHPUnit code-coverage information and send it into some remote location via cURL",
-    "keywords": ["coveralls", "phpunit", "coverage"],
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Taufan Aditya",
-            "email": "toopay@taufanaditya.com"
-        }
-    ],
-    "require": {
-        "php": ">=5.3.3"
+  "name": "chippyash/phpunit-coverage-listener",
+  "description": "Utility library that allow you to process the PHPUnit code-coverage information and send it into some remote location via cURL",
+  "keywords": [
+    "coveralls",
+    "phpunit",
+    "coverage"
+  ],
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Taufan Aditya",
+      "email": "toopay@taufanaditya.com"
     },
-    "require-dev": {
-        "phpunit/phpunit": "~3.7"
-    },
-    "autoload": {
-        "psr-0": { "League\\PHPUnitCoverageListener": "src/" }
+    {
+      "name": "Ashley Kitson",
+      "email": "ashley@zf4.biz"
     }
+  ],
+  "require": {
+    "php": ">=5.6"
+  },
+  "require-dev": {
+    "phpunit/phpunit": ">=4.8,<5"
+  },
+  "autoload": {
+    "psr-0": {
+      "League\\PHPUnitCoverageListener": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "League\\PHPUnitCoverageListener\\Tests\\": "test/"
+    }
+  },
+  "replace": {
+    "league/phpunit-coverage-listener": ">=1"
+  }
 }
