--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "chippyash/phpunit-coverage-listener",
-  "description": "Utility library that allow you to process the PHPUnit code-coverage information and send it into some remote location via cURL",
+  "description": "Utility library that allow you to process the PHPUnit code-coverage information and send it into some remote location",
   "keywords": [
     "coveralls",
     "phpunit",
@@ -18,7 +18,9 @@
     }
   ],
   "require": {
-    "php": ">=5.6"
+    "php": ">=5.6",
+    "chippyash/monad": ">=1.5.3,<2",
+    "symfony/yaml": "~2.1|~3.0"
   },
   "require-dev": {
     "phpunit/phpunit": ">=4.8,<5"
